--- a/css/style.css
+++ b/css/style.css
@@ -2,228 +2,291 @@
 
 
 html {
+    background-color: #56baed;
     box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-}
-
-body {
-    background-color: #f9f9f9;
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.429;
-    color: black;
-}
-
-
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-a {
+  }
+  
+  body {
+    font-family: "Poppins", sans-serif;
+    height: 100vh;
+  }
+  
+  a {
+    color: #92badd;
+    display:inline-block;
     text-decoration: none;
-    color: inherit;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-h1, h2, h3, p {
-    padding: 0;
-    margin: 0;
-}
-
-
-body {
-    background: #edf0f1;
-    padding: 80px 0 0 0;
-}
-
-.todo-container {
-    width: 100%;
-    float: left;
-    padding: 15px;
-}
-
-.header {
-    width: 100%;
-    height: 80px;
-
-    position: fixed;
-    padding: 15px;
-    top: 0;
-    left: 0;
-    z-index: 5;
-
-    background-color: steelblue;
-    box-shadow: 0 2px 4px rgba(44, 62, 80, 0.15);
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-
-.header-input {
-    width: 100%;
-    height: 50px;
-    float: left;
-    color: #fff;
-    font-size: 15px;
     font-weight: 400;
-    text-indent: 18px;
-    padding: 0 60px 0 0;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 5px 25px 25px 5px;
-    border: 0;
-    box-shadow: none;
-    outline: none;
-
-    -webkit-appearance: none;
-    -moz-appearance: none;
-}
-
-.header-input::-webkit-input-placeholder {
-    color: rgba(255, 255, 255, 0.75);
-}
-
-.header-input:-ms-input-placeholder {
-    color: rgba(255, 255, 255, 0.75);
-}
-
-.header-button {
-    width: 50px;
-    height: 50px;
-    background: transparent url("../img/plus.png") no-repeat center/cover;
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    z-index: 2;
-
-    border-radius: 25px;
-    border: 0;
-    box-shadow: none;
-    outline: none;
-    cursor: pointer;
-
-    -webkit-appearance: none;
-    -moz-appearance: none;
-}
-
-
-.todo {
-    width: 100%;
-    float: left;
-}
-
-.todo-item {
-    width: 100%;
-    min-height: 50px;
-    float: left;
-    font-size: 14px;
-    font-weight: 500;
-    color: #444;
-    line-height: 22px;
-
-    background: #fff;
-    border-radius: 5px;
-    position: relative;
-    box-shadow: 0 1px 2px rgba(44, 62, 80, 0.10);
-    margin: 0 0 10px 0;
-    padding: 14px 100px 14px 14px;
-    word-break: break-word;
-}
-
-.todo-item:last-of-type {
-    margin: 0;
-}
-
-.todo-buttons {
-    width: 100px;
-    height: 50px;
-
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
-.todo-buttons button {
-    width: 50px;
-    height: 50px;
-    float: left;
-    background-color: transparent;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
-    border: 0;
-    box-shadow: none;
-    outline: none;
-    cursor: pointer;
-
-    -webkit-appearance: none;
-    -moz-appearance: none;
-}
-
-.todo-buttons .buttons button:last-of-type:before {
-    content: '';
-    width: 1px;
-    height: 30px;
-    background: #edf0f1;
-
-    position: absolute;
-    top: 10px;
-    left: 0;
-}
-
-.todo-remove {
-     background-image: url("../img/trash.png");
- }
-
-.todo-complete {
-    background-image: url("../img/uncheck.png");
-}
-
-.todo-completed .todo-complete {
-    background-image: url("../img/check.png");
-}
-
-.todo-completed {
-    position: relative;
-    padding: 60px 0 0 0;
-}
-
-.todo-completed:before {
-    content: '';
-    width: 150px;
-    height: 1px;
-    background: #d8e5e0;
-
-    position: absolute;
-    top: 30px;
-    left: 50%;
-
-    margin: 0 0 0 -75px;
-}
-
-.todo:empty:after {
-    content: 'Нет задач';
-    margin: 15px 0 0 0;
-}
-
-.todo-completed:empty:after {
-    content: 'Нет выполненых задач';
-}
-
-.todo:after,
-.todo-completed:after {
-    width: 100%;
-    display: block;
+  }
+  
+  h2 {
     text-align: center;
-    font-size: 12px;
-    color: #aaa;
-}
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+    display:inline-block;
+    margin: 40px 8px 10px 8px; 
+    color: #cccccc;
+  }
+  
+  
+  
+  /* STRUCTURE */
+  
+  .wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column; 
+    justify-content: center;
+    width: 100%;
+    min-height: 100%;
+    padding: 20px;
+  }
+  
+  #formContent {
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+    background: #fff;
+    padding: 30px;
+    width: 90%;
+    max-width: 450px;
+    position: relative;
+    padding: 0px;
+    -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    text-align: center;
+  }
+  
+  #formFooter {
+    background-color: #f6f6f6;
+    border-top: 1px solid #dce8f1;
+    padding: 25px;
+    text-align: center;
+    -webkit-border-radius: 0 0 10px 10px;
+    border-radius: 0 0 10px 10px;
+  }
+  
+  
+  
+  /* TABS */
+
+  h2.active, h2.inactive {
+    cursor: pointer;
+  }
+  
+  h2.inactive {
+    color: #cccccc;
+  }
+  
+  h2.active {
+    color: #0d0d0d;
+    border-bottom: 2px solid #5fbae9;
+  }
+  
+  
+  
+  /* FORM TYPOGRAPHY*/
+  
+  input[type=button], input[type=submit], input[type=reset]  {
+    background-color: #56baed;
+    border: none;
+    color: white;
+    padding: 15px 80px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 13px;
+    -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+    margin: 5px 20px 40px 20px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
+    background-color: #39ace7;
+  }
+  
+  input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
+    -moz-transform: scale(0.95);
+    -webkit-transform: scale(0.95);
+    -o-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    transform: scale(0.95);
+  }
+  
+  input[type=text], input[type=password] {
+    background-color: #f6f6f6;
+    border: none;
+    color: #0d0d0d;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px;
+    width: 85%;
+    border: 2px solid #f6f6f6;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+  }
+  
+  input[type=text]:focus, input[type=password]:focus {
+    background-color: #fff;
+    border-bottom: 2px solid #5fbae9;
+  }
+  
+  input[type=text]:placeholder, input[type=password]:placeholder {
+    color: #cccccc;
+  }
+  
+  
+  
+  /* ANIMATIONS */
+  
+  /* Simple CSS3 Fade-in-down Animation */
+  .fadeInDown {
+    -webkit-animation-name: fadeInDown;
+    animation-name: fadeInDown;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+  }
+  
+  @-webkit-keyframes fadeInDown {
+    0% {
+      opacity: 0;
+      -webkit-transform: translate3d(0, -100%, 0);
+      transform: translate3d(0, -100%, 0);
+    }
+    100% {
+      opacity: 1;
+      -webkit-transform: none;
+      transform: none;
+    }
+  }
+  
+  @keyframes fadeInDown {
+    0% {
+      opacity: 0;
+      -webkit-transform: translate3d(0, -100%, 0);
+      transform: translate3d(0, -100%, 0);
+    }
+    100% {
+      opacity: 1;
+      -webkit-transform: none;
+      transform: none;
+    }
+  }
+  
+  /* Simple CSS3 Fade-in Animation */
+  @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+  @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+  @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+  
+  .fadeIn {
+    opacity:0;
+    -webkit-animation:fadeIn ease-in 1;
+    -moz-animation:fadeIn ease-in 1;
+    animation:fadeIn ease-in 1;
+  
+    -webkit-animation-fill-mode:forwards;
+    -moz-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
+  
+    -webkit-animation-duration:0.5s;
+    -moz-animation-duration:0.5s;
+    animation-duration:0.5s;
+  }
+  
+  .fadeIn.first {
+    -webkit-animation-delay: 0.2s;
+    -moz-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+  }
+  
+  .fadeIn.second {
+    -webkit-animation-delay: 0.4s;
+    -moz-animation-delay: 0.4s;
+    animation-delay: 0.4s;
+  }
+  
+  .fadeIn.third {
+    -webkit-animation-delay: 0.6s;
+    -moz-animation-delay: 0.6s;
+    animation-delay: 0.6s;
+  }
+  
+  .fadeIn.fourth {
+    -webkit-animation-delay: 0.8s;
+    -moz-animation-delay: 0.8s;
+    animation-delay: 0.8s;
+  }
+  
+  /* Simple CSS3 Fade-in Animation */
+  .underlineHover:after {
+    display: block;
+    left: 0;
+    bottom: -10px;
+    width: 0;
+    height: 2px;
+    background-color: #56baed;
+    content: "";
+    transition: width 0.2s;
+  }
+  
+  .underlineHover:hover {
+    color: #0d0d0d;
+  }
+  
+  .underlineHover:hover:after{
+    width: 100%;
+  }
+  
+  
+  
+  /* OTHERS */
+  
+  *:focus {
+      outline: none;
+  } 
+  
+  #icon {
+    width:60%;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+
+  .m-block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .m-block *{
+    padding: 10px 5px 10px 5px;
+    margin: 0 10px 0 10px;
+  }
+
+  .m-block > .error{
+    background-color: darksalmon;
+    color: red;
+  }
+
+  .m-block > .pass{
+    background-color: lightgreen;
+    color: green;
+  }
